--- a/characters.html
+++ b/characters.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cain Menu</title>
+    <title>Characters</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Your content goes here -->
-    <h1>Cairn</h1>
-     <a href="characters.html">Characters</a>
-    <script src="script.js"></script>
+    <h1>Generate Starting Characters</h1>
+    
+    <script src="characters.js"></script>
 </body>
 </html>
