--- a/dungeons.html
+++ b/dungeons.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cain Menu</title>
+    <title>Cairn Dungeons</title>
+
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dungeons.css">
 </head>
 <body>
-    <!-- Your content goes here -->
-    <h1>Cairn</h1>
-    <a href="characters.html">Characters</a>
-    <a href="dungeons.html">Dungeons</a>
-    <script src="script.js"></script>
+    <h1>Dungeons</h1>
+
+    <script src="dungeons.js" defer></script>
 </body>
 </html>
