Started logic for dungeons

--- a/dungeons.html
+++ b/dungeons.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <h1>Dungeons</h1>
+    <button id="btn-create-dungeon">Random Dungeon</button>
+    <div id="display-dungeon"></div>
 
     <script src="dungeons.js" defer></script>
+    <script src="dungeons_data.js"></script>
 </body>
 </html>
