dungeon history done

--- a/dungeons.html
+++ b/dungeons.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dungeons.css">
 </head>
 <body>
-    <h1>Dungeons</h1>
+    <h1>Cairn Dungeons</h1>
     <button id="btn-create-dungeon">Random Dungeon</button>
     <div id="display-dungeon"></div>
 
