--- a/dungeons.html
+++ b/dungeons.html
@@ -10,10 +10,20 @@
 </head>
 <body>
     <h1>Cairn Dungeons</h1>
-    <button id="btn-create-dungeon">Random Dungeon</button>
-    <div id="display-dungeon"></div>
+    <div class="flex-container">
+        
+        <div class="column">
+            <button id="btn-create-dungeon">Random Dungeon</button>
+            <div class="column" id="display-dungeon"></div>
+        </div>
+        <div class="column">
+            <button id="btn-create-room">Random Room</button>
+            <div id="display-room"></div>
+        </div>
+    </div>
 
     <script src="dungeons.js" defer></script>
     <script src="dungeons_data.js"></script>
+    <script src="dungeon_rooms.js"></script>
 </body>
 </html>
