--- a/characters.html
+++ b/characters.html
@@ -16,6 +16,7 @@
     
     <div id="display-character"></div>
 
+    <script src="script.js"></script>
     <script src="characters.js"></script>
 </body>
 </html>
