--- a/dungeons.html
+++ b/dungeons.html
@@ -14,7 +14,7 @@
         
         <div class="column">
             <button id="btn-create-dungeon">Random Dungeon</button>
-            <div class="column" id="display-dungeon"></div>
+            <div id="display-dungeon"></div>
         </div>
         <div class="column">
             <button id="btn-create-room">Random Room</button>
@@ -22,6 +22,7 @@
         </div>
     </div>
 
+    <script src="script.js"></script>
     <script src="dungeons.js" defer></script>
     <script src="dungeons_data.js"></script>
     <script src="dungeon_rooms.js"></script>
