Starting Setting Details

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <!-- Your content goes here -->
     <h1>Cairn</h1>
     <a href="characters.html">Characters</a>
+    <br>
+    <a href="setting.html">Settings</a>
+    <br>
     <a href="dungeons.html">Dungeons</a>
+    
     <script src="script.js"></script>
 </body>
 </html>
