Finished  faction data

--- a/setting.html
+++ b/setting.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <h1>Cairn Settings</h1>
+    <button id="btn-generate-people">Generate People</button>
+    <br><br>
+    <div id="display-people"></div>
+
+    <br>
+
+    <button id="btn-generate-faction">Generate Faction</button>
+    <br><br>
+    <div id="display-faction"></div>
+
+    <br>
+
+    <button id="btn-generate-faction-action-outcome">Generate Faction Action Outcome</button>
+    <br><br>
+    <div id="display-faction-action-outcome"></div>
+
     <script src="setting.js"></script>
+    <script src="people.js"></script>
 </body>
 </html>
