ready for terrain

--- a/setting.html
+++ b/setting.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Cairn Settings</h1>
-    <button id="btn-generate-people">Generate People</button>
+    <button id="btn-generate-people">Generate Regional People</button>
     <br><br>
     <div id="display-people"></div>
 
