--- a/setting.html
+++ b/setting.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Cairn Settings</h1>
+    <h2>Region</h2>
     <button id="btn-generate-people">Generate Regional People</button>
     <br><br>
     <div id="display-people"></div>
@@ -24,6 +25,9 @@
     <button id="btn-generate-faction-action-outcome">Generate Faction Action Outcome</button>
     <br><br>
     <div id="display-faction-action-outcome"></div>
+
+    <h2>Terrain</h2>
+    
 
     <script src="setting.js"></script>
     <script src="people.js"></script>
